       (Issue #165).
     - Fix issue where, on first deploy, the MySQL engine would fail to notice
       that the server was not the right version of MySQL. Thanks to Luke
       Young for the report (Issue #158).
     - Made the `checkit()` MySQL function DETERMINISTIC, to improve
       compatability with MariaDB. Thanks to Jesse Luehrs for the report
       (Issue #158).

0.992  2014-03-05T00:34:49Z
     - Fixed target test failures on Windows.
     - Added support for Postgres-XC to the PostgreSQL engine. Sqitch registry
       tables are distributed by replication to all data nodes.
     - Added support to MariaDB 5.3 and higher to the MySQL engine, thanks to
       Ed Silva.

0.991  2014-01-16T23:24:33Z
     - Greatly simplified determining the Firebird ISQL client. It no longer
       tries so hard to find a full path, but does seach through the path list
       for a likely candidate between fbsql, isql-fb, and isql (or equivalents
       ending in .exe on Windows).
     - Removed a bunch of inappropriately pasted stuff from the Firebird
       tutorial, and updated it a bit.
     - `HEAD` and `ROOT` are now recognized as aliases for `@HEAD` and
       `@ROOT`, when querying the database, too. That means that `revert --to
       HEAD` now works the same as `revert --to @HEAD`, as had been expected
       in v0.990.
     - Eliminated "use of uninitialized value" warnings when database
       connections fail.
     - Reduced the minimum required DBD::Firebird to v1.11.
     - Fixed the `--verbose` option to the `target` command.
     - Eliminated more user-configuration issues in tests, thanks to
       chromatic.
     - Fixed test failures when the `$PGPASSWORD` environment variable is set,
       thanks to Ioan Rogers's test smoker.

0.990  2014-01-04T01:14:24Z
     [New Features]
     - Added new command and feature: `target`. Use it to manage multiple
       database targets, each with an associated URI and, optionally, a